--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,10 +51,10 @@ application.langs="en"
 # You can also configure logback (http://logback.qos.ch/),
 # by providing an application-logger.xml file in the conf directory.
 
-# Root logger:
+# Root logger: # ERROR
 logger.root=ERROR
 
-# Logger used by the framework:
+# Logger used by the framework: # INFO
 logger.play=INFO
 
 # Logger provided to your application:
