add swageer try url in applciation.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,6 @@
 mongodb.uri = "mongodb://localhost:27017/ms_viz"
 
+swagger.api.basepath="http://localhost:9000"
 
 # This is the main configuration file for the application.
 # ~~~~~
