replace ModificatioReference by ModifName

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,3 +64,5 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Unimod XML file
+unimod.xml="/tmp/unimod.xml"
