on the sonar road

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,11 @@ sonar.projectKey=msviz:backend
 sonar.projectName=MsViz backend
 sonar.projectVersion=0.0.1
 
-
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# Since SonarQube 4.2, this property is optional if sonar.modules is set.
+# If not set, SonarQube starts looking for source code from the directory containing
+# the sonar-project.properties file.
+sonar.sources=app
 #sonar.language=scala
 
 sonar.scoverage.reportPath=target/scala-2.11/scoverage-report/scoverage.xml
