set the unimodXMLPath when loading mzIdentMl

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,4 +65,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Unimod XML file
-unimod.xml="/tmp/unimod.xml"
+#unimod="/var/vhosts/vital-it.ch/msviz/home/backend/unimod/150929_unimod_modified.xml"
