--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,12 +1,12 @@
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.user=sa
+#db.default.password=""
 
-#db.default.url = "jdbc:mysql://localhost:8889/msviz"
-#db.default.driver = com.mysql.jdbc.Driver
-#db.default.user=root
-#db.default.password="root"
+db.default.url = "jdbc:mysql://localhost:8889/msviz"
+db.default.driver = com.mysql.jdbc.Driver
+db.default.user=root
+db.default.password="root"
 
 
 mongodb.uri = "mongodb://localhost:27017/ms_viz"
@@ -76,4 +76,4 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Unimod XML file
-#unimod="/var/vhosts/vital-it.ch/msviz/home/backend/unimod/150929_unimod_modified.xml"
+unimod="/Users/admin/Work/PAF/msViz/data/unimod/150929_unimod_modified.xml"
