--- a/conf/application.test.conf
+++ b/conf/application.test.conf
@@ -2,3 +2,5 @@ db.default.driver=org.h2.Driver
 db.default.url="jdbc:h2:mem:play"
 db.default.user=sa
 db.default.password=""
+
+mongodb.uri = "mongodb://localhost:27017/ms_viz"
