Ms1 input is slower but doesnt block the application

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,3 +66,7 @@ logger.application=DEBUG
 
 # Unimod XML file
 unimod="/Users/admin/Work/PAF/msViz/data/unimod/150929_unimod_modified.xml"
+
+# The buffer (nr of spectra) used when importing MS1 data. The bigger the faster,
+# but you might run into a out.of.memory error
+experimental.ms1.buffer=100
