--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,7 +67,11 @@ logger.application=DEBUG
 # Unimod XML file
 unimod="/Users/admin/Work/PAF/msViz/data/unimod/150929_unimod_modified.xml"
 
-# The buffer (nr of spectra) used when importing MS1 and MS2 data. The bigger the faster,
+# The buffer (nr of spectra) used when importing MS1 data. The bigger the faster,
 # but you might run into a out.of.memory error
-experimental.ms1.buffer=500
-experimental.ms2.buffer=500
+experimental.ms1.buffer=100
+experimental.ms2.buffer=100
+
+#upload dir
+
+upload.dir = "/Users/tmartinc/work/uploads/"
