insert ms1 and ms2 in parallel -> there should be no more out of memories

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,12 +69,13 @@ unimod="/Users/admin/Work/PAF/msViz/data/unimod/150929_unimod_modified.xml"
 
 # The buffer (nr of spectra) used when importing MS1 data. The bigger the faster,
 # but you might run into a out.of.memory error
-experimental.ms1.buffer=100
+experimental.ms1.buffer=500
 # the database timeout limit in minutes for inserting a buffer of ms1 data
-experimental.ms1.timeout=10
 
 experimental.ms2.buffer=500
 
+experimental.ms1and2.buffer=2000
+experimental.db.timeout=10
 
 
 #upload dir
