load fasta files local and sequentially

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,16 +71,17 @@ unimod="/Users/admin/Work/PAF/msViz/data/unimod/150929_unimod_modified.xml"
 # but you might run into a out.of.memory error
 experimental.ms1.buffer=500
 # the database timeout limit in minutes for inserting a buffer of ms1 data
-
 experimental.ms2.buffer=500
 
+# again buffer size for the new version of the Ms1 and MS2 import
 experimental.ms1and2.buffer=2000
 experimental.db.timeout=10
 
+# block size for the seqeuntial import of FASTA files
+theoretical.block.size=5000
 
 #upload dir
-
-upload.dir = "/Users/tmartinc/work/uploads/"
+upload.dir = "/Users/admin/tmp/"
 
 #Actors
 
